Closed Bug 1602710 Opened 4 years ago Closed 4 years ago

Intermittent Last test finished | application crashed [@ nsThread::ShutdownInternal(bool)]

Categories

(Core :: Graphics: ImageLib, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox-esr68 --- wontfix
firefox72 --- wontfix
firefox73 --- wontfix
firefox74 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: aosmond)

References

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file)

Filed by: nerli [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=280437085&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/eEYBV8gjQ7CkWHjaASFtSQ/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/eEYBV8gjQ7CkWHjaASFtSQ/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2019-12-10T07:55:14.528Z] 07:55:14 INFO - REFTEST INFO | Copy/paste: Z:\task_1575963104\build\win32-minidump_stackwalk.exe c:\users\task_1575963104\appdata\local\temp\tmpdwlafd.mozrunner\minidumps\5759c6ca-16b1-4fa6-902d-f6cb898f62cc.dmp Z:\task_1575963104\build\symbols
[task 2019-12-10T07:55:25.858Z] 07:55:25 INFO - REFTEST INFO | Saved minidump as Z:\task_1575963104\build\blobber_upload_dir\5759c6ca-16b1-4fa6-902d-f6cb898f62cc.dmp
[task 2019-12-10T07:55:25.878Z] 07:55:25 INFO - REFTEST PROCESS-CRASH | Last test finished | application crashed [@ nsThread::ShutdownInternal(bool)]
[task 2019-12-10T07:55:25.878Z] 07:55:25 INFO - Crash dump filename: c:\users\task_1575963104\appdata\local\temp\tmpdwlafd.mozrunner\minidumps\5759c6ca-16b1-4fa6-902d-f6cb898f62cc.dmp
[task 2019-12-10T07:55:25.878Z] 07:55:25 INFO - Operating system: Windows NT
[task 2019-12-10T07:55:25.878Z] 07:55:25 INFO - 10.0.17134
[task 2019-12-10T07:55:25.878Z] 07:55:25 INFO - CPU: amd64
[task 2019-12-10T07:55:25.879Z] 07:55:25 INFO - family 6 model 79 stepping 1
[task 2019-12-10T07:55:25.879Z] 07:55:25 INFO - 4 CPUs
[task 2019-12-10T07:55:25.879Z] 07:55:25 INFO -
[task 2019-12-10T07:55:25.879Z] 07:55:25 INFO - GPU: UNKNOWN
[task 2019-12-10T07:55:25.879Z] 07:55:25 INFO -
[task 2019-12-10T07:55:25.879Z] 07:55:25 INFO - Crash reason: EXCEPTION_BREAKPOINT
[task 2019-12-10T07:55:25.880Z] 07:55:25 INFO - Crash address: 0x7ffa27109262
[task 2019-12-10T07:55:25.880Z] 07:55:25 INFO - Assertion: Unknown assertion type 0x00000000
[task 2019-12-10T07:55:25.880Z] 07:55:25 INFO - Process uptime: 9 seconds
[task 2019-12-10T07:55:25.880Z] 07:55:25 INFO -
[task 2019-12-10T07:55:25.880Z] 07:55:25 INFO - Thread 0 (crashed)
[task 2019-12-10T07:55:25.880Z] 07:55:25 INFO - 0 xul.dll!nsThread::ShutdownInternal(bool) [nsThread.cpp:dc78ef598fd2f2024519fb463826c771996e86b1 : 837 + 0x0]
[task 2019-12-10T07:55:25.880Z] 07:55:25 INFO - rax = 0x00007ffa2f3f2353 rdx = 0x00007ffa7812a640
[task 2019-12-10T07:55:25.881Z] 07:55:25 INFO - rcx = 0x00007ffa6c5c8f08 rbx = 0x0000022095e164f0
[task 2019-12-10T07:55:25.881Z] 07:55:25 INFO - rsi = 0x000002209bfb5190 rdi = 0x0000000000000000
[task 2019-12-10T07:55:25.881Z] 07:55:25 INFO - rbp = 0x0000000000000001 rsp = 0x000000dddd3fedd0
[task 2019-12-10T07:55:25.881Z] 07:55:25 INFO - r8 = 0x000000dddd3f8f28 r9 = 0x000000dddd3fa540
[task 2019-12-10T07:55:25.881Z] 07:55:25 INFO - r10 = 0x0000000000000000 r11 = 0x000000dddd3fa450
[task 2019-12-10T07:55:25.881Z] 07:55:25 INFO - r12 = 0x00000000ffffffff r13 = 0x0000022095e9e040
[task 2019-12-10T07:55:25.881Z] 07:55:25 INFO - r14 = 0x0000022095e9e110 r15 = 0x000000dddd3ff527
[task 2019-12-10T07:55:25.882Z] 07:55:25 INFO - rip = 0x00007ffa27109262
[task 2019-12-10T07:55:25.882Z] 07:55:25 INFO - Found by: given as instruction pointer in context
[task 2019-12-10T07:55:25.882Z] 07:55:25 INFO - 1 xul.dll!nsThread::AsyncShutdown() [nsThread.cpp:dc78ef598fd2f2024519fb463826c771996e86b1 : 831 + 0xc]
[task 2019-12-10T07:55:25.882Z] 07:55:25 INFO - rbx = 0x0000022095e164f0 rbp = 0x0000000000000001
[task 2019-12-10T07:55:25.882Z] 07:55:25 INFO - rsp = 0x000000dddd3fee40 r12 = 0x00000000ffffffff
[task 2019-12-10T07:55:25.882Z] 07:55:25 INFO - r13 = 0x0000022095e9e040 r14 = 0x0000022095e9e110
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - r15 = 0x000000dddd3ff527 rip = 0x00007ffa27108d55
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - Found by: call frame info
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - 2 xul.dll!nsresult mozilla::detail::RunnableMethodImpl<nsIThread ,nsresult (nsIThread::)(),1,mozilla::RunnableKind::Standard>::Run() [nsThreadUtils.h:dc78ef598fd2f2024519fb463826c771996e86b1 : 1176 + 0x3]
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - rbx = 0x0000022095e164f0 rbp = 0x0000000000000001
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - rsp = 0x000000dddd3fee80 r12 = 0x00000000ffffffff
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - r13 = 0x0000022095e9e040 r14 = 0x0000022095e9e110
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - r15 = 0x000000dddd3ff527 rip = 0x00007ffa27122dd3
[task 2019-12-10T07:55:25.883Z] 07:55:25 INFO - Found by: call frame info

[task 2019-12-10T07:54:50.424Z] 07:54:50 INFO - REFTEST TEST-START | file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-novalidate.html == file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-withtext-ref.html
[task 2019-12-10T07:54:50.424Z] 07:54:50 INFO - REFTEST TEST-LOAD | file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-novalidate.html | 16 / 17 (94%)
[task 2019-12-10T07:54:50.720Z] 07:54:50 INFO - REFTEST TEST-PASS | file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-novalidate.html == file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-withtext-ref.html | image comparison, max difference: 0, number of differing pixels: 0
[task 2019-12-10T07:54:50.720Z] 07:54:50 INFO - REFTEST TEST-END | file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-novalidate.html == file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-withtext-ref.html
[task 2019-12-10T07:54:50.742Z] 07:54:50 INFO - REFTEST INFO | Slowest test took 574ms (file:///Z:/task_1575963104/build/tests/reftest/tests/layout/reftests/css-ui-valid/textarea/textarea-disabled.html)
[task 2019-12-10T07:54:50.742Z] 07:54:50 INFO - REFTEST INFO | Total canvas count = 3
[task 2019-12-10T07:54:50.985Z] 07:54:50 INFO - [GPU 6536, Compositor] WARNING: Possibly dropping task posted to updater thread: file z:/build/build/src/gfx/layers/apz/src/APZUpdater.cpp, line 429
[task 2019-12-10T07:54:51.022Z] 07:54:51 INFO - [GPU 6536, Compositor] WARNING: Possibly dropping task posted to updater thread: file z:/build/build/src/gfx/layers/apz/src/APZUpdater.cpp, line 429
[task 2019-12-10T07:54:51.105Z] 07:54:51 INFO - ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2019-12-10T07:54:51.111Z] 07:54:51 INFO - [Parent 10816, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file z:/build/build/src/netwerk/cache/nsCacheService.cpp, line 855
[task 2019-12-10T07:54:51.112Z] 07:54:51 INFO - [Parent 10816, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file z:/buAild/build/src/netwssertion failure: mThreaerkd, at z:/build/build/src/xpcom/threads/nsThread./cache/nsCacheService.cpp, line 818
[task 2019-12-10T07:54:51.112Z] 07:54:51 INFO - cpp:83[Parent 10816, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file z:/build/build/src/netwerk/cache/nsApplicationCacheService.cpp, line 158
[task 2019-12-10T07:54:51.112Z] 07:54:51 INFO - 7
[task 2019-12-10T07:55:14.316Z] 07:55:14 INFO - #01: nsresult mozilla::detail::RunnableMethodImpl<nsIThread ,nsresult (nsIThread::)(),1,mozilla::RunnableKind::Standard>::Run() [xpcom/threads/nsThreadUtils.h:1179]
[task 2019-12-10T07:55:14.316Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.316Z] 07:55:14 INFO - #02: mozilla::SchedulerGroup::Runnable::Run() [xpcom/threads/SchedulerGroup.cpp:295]
[task 2019-12-10T07:55:14.316Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.317Z] 07:55:14 INFO - #03: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1257]
[task 2019-12-10T07:55:14.317Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.317Z] 07:55:14 INFO - #04: nsThread::Shutdown() [xpcom/threads/nsThread.cpp:928]
[task 2019-12-10T07:55:14.317Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.318Z] 07:55:14 INFO - #05: mozilla::image::DecodePoolImpl::Shutdown() [image/DecodePool.cpp:111]
[task 2019-12-10T07:55:14.318Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.318Z] 07:55:14 INFO - #06: mozilla::image::DecodePool::Observe(nsISupports *,char const *,char16_t const *) [image/DecodePool.cpp:437]
[task 2019-12-10T07:55:14.318Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.319Z] 07:55:14 INFO - #07: nsObserverList::NotifyObservers(nsISupports *,char const *,char16_t const *) [xpcom/ds/nsObserverList.cpp:65]
[task 2019-12-10T07:55:14.319Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.319Z] 07:55:14 INFO - #08: nsObserverService::NotifyObservers(nsISupports *,char const *,char16_t const *) [xpcom/ds/nsObserverService.cpp:295]
[task 2019-12-10T07:55:14.319Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.319Z] 07:55:14 INFO - #09: mozilla::ShutdownXPCOM(nsIServiceManager *) [xpcom/build/XPCOMInit.cpp:639]
[task 2019-12-10T07:55:14.320Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.320Z] 07:55:14 INFO - #10: XRE_TermEmbedding() [toolkit/xre/nsEmbedFunctions.cpp:227]
[task 2019-12-10T07:55:14.320Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.321Z] 07:55:14 INFO - #11: mozilla::ipc::ScopedXREEmbed::Stop() [ipc/glue/ScopedXREEmbed.cpp:91]
[task 2019-12-10T07:55:14.321Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.321Z] 07:55:14 INFO - #12: XRE_InitChildProcess(int,char * * const,XREChildData const *) [toolkit/xre/nsEmbedFunctions.cpp:786]
[task 2019-12-10T07:55:14.321Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.501Z] 07:55:14 INFO - #13: NS_internal_main(int,char * *,char * *) [browser/app/nsBrowserApp.cpp:303]
[task 2019-12-10T07:55:14.501Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.502Z] 07:55:14 INFO - #14: wmain [toolkit/xre/nsWindowsWMain.cpp:131]
[task 2019-12-10T07:55:14.503Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.503Z] 07:55:14 INFO - #15: static int __scrt_common_main_seh() [f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:288]
[task 2019-12-10T07:55:14.504Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.504Z] 07:55:14 INFO - #16: KERNEL32.DLL + 0x13034
[task 2019-12-10T07:55:14.505Z] 07:55:14 INFO -
[task 2019-12-10T07:55:14.505Z] 07:55:14 INFO - #17: ntdll.dll + 0x71461

Component: Reftest → ImageLib
Product: Testing → Core
Version: Version 3 → unspecified

The priority flag is not set for this bug.
:aosmond, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(aosmond)

Looks like we have a shutdown race condition in the decode thread pool. We shouldn't dispatch an async shutdown for a thread if it has gone idle if it was already removed due to a shutdown observer event.

Assignee: nobody → aosmond
Flags: needinfo?(aosmond)
Priority: -- → P3

We should not attempt to shut down threads which we did not explicitly
remove from the image decode thread pool, when we want to shut down an
idle thread or otherwise. This behaviour would put us at risk of
shutting down a thread twice, which may trip assertions and/or cause
other issues. Now we assuming that any thread that is already removed
from the pool array has already been gracefully shutdown.

Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6defb6e4850d
Do not shut down threads not found in the image decode thread pool. r=tnikkel
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: