Bug 1602710 - Do not shut down threads not found in the image decode thread pool. r=tnikkel

We should not attempt to shut down threads which we did not explicitly
remove from the image decode thread pool, when we want to shut down an
idle thread or otherwise. This behaviour would put us at risk of
shutting down a thread twice, which may trip assertions and/or cause
other issues. Now we assuming that any thread that is already removed
from the pool array has already been gracefully shutdown.

Differential Revision: https://phabricator.services.mozilla.com/D58827